# UICRM-Embedded

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  daplink.cfg  debug_stlink.cfg  rtt.cfg  rtt_viewer.py  run-clang-format.py
boards/base/: CMakeLists.txt
boards/base/BulletExchanger_F103/: .mxproject  BulletExchanger_F103.ioc  CMakeLists.txt  STM32F103XX_FLASH.ld
boards/base/DJI_Board_TypeA_general/: .mxproject  CMakeLists.txt  DJI_Board_TypeA_general.ioc  STM32F427IIHx_FLASH.ld  STM32F427XX_FLASH.ld
boards/base/DJI_Board_TypeC_general/: .mxproject  CMakeLists.txt  DJI_Board_TypeC_general.ioc  DJI_Board_TypeC_old.ioc  STM32F407IGHx_FLASH.ld  STM32F407XX_FLASH.ld
boards/base/DM_MC01_general/: .mxproject  DM_MC01_general.ioc  STM32F446XX_FLASH.ld
boards/base/DM_MC02_general/: .cproject.bak  .mxproject  .project.bak  CMakeLists.txt  DM_MC02_general.ioc  STM32H723VGTX_FLASH.ld  STM32H723VGTX_RAM.ld
boards/base/F103_Nano_general/: .mxproject  CMakeLists.txt  F103_Nano_general.ioc  STM32F103CBTx_FLASH.ld  STM32F103XX_FLASH.ld
examples/: CMakeLists.txt
examples/DJI_Board_TypeA_general/: CMakeLists.txt
examples/DJI_Board_TypeA_general/AS5600/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeA_general/MPU6500/: AHRS.cpp  CMakeLists.txt  magCal.m  main.cpp
examples/DJI_Board_TypeA_general/buzzer/: main.cpp
examples/DJI_Board_TypeA_general/can_bridge/: client.cpp  host.cpp
examples/DJI_Board_TypeA_general/chassis/: CMakeLists.txt  can_bridge_chassis.cpp  can_bridge_chassis_sender.cpp  main.cpp  sbus.cpp
examples/DJI_Board_TypeA_general/dbus/: main.cpp
examples/DJI_Board_TypeA_general/fatfs/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeA_general/gimbal/: CMakeLists.txt  typeA.cpp
examples/DJI_Board_TypeA_general/imu/: CMakeLists.txt  calibrate.cpp  magCal.m  main.cpp  poseEstimate.cpp
examples/DJI_Board_TypeA_general/led_flow/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeA_general/motor/: CMakeLists.txt  m2006.cpp  m2006_theta.cpp  m2305.cpp  m3508.cpp  m3508_flywheel.cpp  m3508_theta.cpp  m6020.cpp  m6020_theta.cpp  m6623.cpp  pwm.cpp  servo_m2006.cpp  servo_m3508.cpp
examples/DJI_Board_TypeA_general/referee/: main.cpp  rc.cpp
examples/DJI_Board_TypeA_general/witimu/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/: CMakeLists.txt
examples/DJI_Board_TypeC_general/AdernalSuperCap/: main.cpp  控制.md
examples/DJI_Board_TypeC_general/Automata/: CMakeLists.txt  fsm_led.cpp  performance_test.cpp  switch_performance.cpp
examples/DJI_Board_TypeC_general/BMI088/: AHRS.cpp  CMakeLists.txt  QEKF.cpp  main.cpp  with_ist8310.cpp
examples/DJI_Board_TypeC_general/adernal_supercap/: CMakeLists.txt  main.cpp  控制.md
examples/DJI_Board_TypeC_general/buzzer/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/can_bridge/: CMakeLists.txt  client.cpp  host.cpp
examples/DJI_Board_TypeC_general/canbridge_supercap/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/chassis/: CMakeLists.txt  STEER_WHEEL_README.md  can_bridge_chassis.cpp  main.cpp  mecanum_example.cpp  omni_example.cpp  power_data_collect.cpp  power_limit_test.cpp  sbus.cpp  steer_wheel.cpp
examples/DJI_Board_TypeC_general/chassis_supercap/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/cybergear/: CMakeLists.txt  current.cpp  main.cpp  mit.cpp
examples/DJI_Board_TypeC_general/dbus/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/gimbal/: CMakeLists.txt  imu_stablized.cpp  main.cpp  typeC.cpp  typeC_old.cpp  typeC_sbus.cpp
examples/DJI_Board_TypeC_general/imu/: CMakeLists.txt  main.cpp  typeC.cpp  typeC_oled.cpp  typeC_usb.cpp
examples/DJI_Board_TypeC_general/ist8310/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/key/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/laser/: CMakeLists.txt  main.cpp
examples/DJI_Board_TypeC_general/led/: CMakeLists.txt  typeC.cpp
examples/DJI_Board_TypeC_general/motor/: CMakeLists.txt  dm4310.cpp  dm4310_new.cpp  m2006.cpp  m2006_theta.cpp  m2305.cpp  m3508.cpp  m3508_antijam.cpp  m3508_flywheel.cpp  m3508_theta.cpp  m6020.cpp  m6020_theta.cpp  m6623.cpp  (+6 more)
examples/DM_MC01_general/: CMakeLists.txt
examples/DM_MC02_general/: CMakeLists.txt
examples/F103_Nano_general/: CMakeLists.txt
examples/buzzer/: CMakeLists.txt  main.cpp
examples/chassis/: CMakeLists.txt  main.cpp
examples/dbus/: CMakeLists.txt  main.cpp
examples/gimbal/: CMakeLists.txt  imu_stablized.cpp  main.cpp  typeC.cpp  typeC_old.cpp
examples/imu/: CMakeLists.txt  calibrate.cpp  main.cpp  poseEstimate.cpp  typeC.cpp  typeC_oled.cpp  typeC_usb.cpp
examples/key/: CMakeLists.txt  main.cpp
examples/laser/: CMakeLists.txt  main.cpp
examples/led/: CMakeLists.txt  typeA.cpp  typeC.cpp
examples/motor/: CMakeLists.txt  m2006.cpp  m2305.cpp  m3508.cpp  m6020.cpp  pwm.cpp  servo.cpp  servo_m2006.cpp  servo_m3508.cpp
examples/oled/: CMakeLists.txt  main.cpp
examples/onboard_temp/: CMakeLists.txt  main.cpp
examples/protocol/: CMakeLists.txt  client.cpp
examples/referee/: CMakeLists.txt
examples/refree/: main.cpp
examples/supercap/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt
shared/bsp/: bsp_adc.cpp  bsp_adc.h  bsp_batteryvol.cpp  bsp_batteryvol.h  bsp_buzzer.cpp  bsp_buzzer.h  bsp_can.cpp  bsp_can.h  bsp_can_bridge.cpp  bsp_can_bridge.h  bsp_error_handler.cpp  bsp_error_handler.h  bsp_gpio.cpp  bsp_gpio.h  bsp_heater.cpp  bsp_heater.h  bsp_imu.cpp  bsp_imu.h  bsp_laser.cpp  bsp_laser.h  bsp_memory.cpp  bsp_mpu6500_reg.h  bsp_os.cpp  bsp_os.h  bsp_print.cpp  bsp_print.h  bsp_pwm.cpp  bsp_pwm.h  bsp_tempreture.cpp  bsp_tempreture.h  bsp_uart.cpp  bsp_uart.h  bsp_usb.cpp  bsp_usb.h
shared/libraries/: chassis.cpp  chassis.h  controller.cpp  controller.h  crc8.cpp  crc8.h  dbus.cpp  dbus.h  gimbal.cpp  gimbal.h  motor.cpp  motor.h  oled.cpp  oled.h  pose.cpp  pose.h  power_limit.cpp  power_limit.h  protocol.cpp  protocol.h  rgb.cpp  rgb.h  supercap.cpp  supercap.h  user_interface.cpp  user_interface.h  utils.cpp  utils.h
(+871 files in other folders)
