add_subdirectory(buzzer)
add_subdirectory(chassis)
add_subdirectory(dbus)
add_subdirectory(gimbal)
add_subdirectory(imu)
add_subdirectory(key)
add_subdirectory(laser)
add_subdirectory(led)
add_subdirectory(motor)
add_subdirectory(oled)
add_subdirectory(onboard_temp)
add_subdirectory(protocol)
add_subdirectory(referee)
add_subdirectory(supercap)