get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(BOARD_NAME ${CURRENT_DIR_NAME})
add_subdirectory(buzzer)
add_subdirectory(can_bridge)
add_subdirectory(chassis)
add_subdirectory(MPU6500)
add_subdirectory(fatfs)
add_subdirectory(led_flow)
add_subdirectory(gimbal)
add_subdirectory(motor)