get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(BOARD_NAME ${CURRENT_DIR_NAME})
add_subdirectory(buzzer)
add_subdirectory(chassis)
add_subdirectory(dbus)
add_subdirectory(gimbal)
add_subdirectory(imu)
add_subdirectory(key)
add_subdirectory(laser)
add_subdirectory(led)
add_subdirectory(motor)
add_subdirectory(oled)
add_subdirectory(onboard_temp)
add_subdirectory(protocol)
add_subdirectory(referee)