get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(BOARD_NAME ${CURRENT_DIR_NAME})
add_subdirectory(BMI088)
add_subdirectory(buzzer)
add_subdirectory(can_bridge)
add_subdirectory(chassis)
add_subdirectory(cybergear)
add_subdirectory(dbus)
add_subdirectory(gimbal)
add_subdirectory(imu)
add_subdirectory(ist8310)
add_subdirectory(key)
add_subdirectory(led)
add_subdirectory(motor)
add_subdirectory(oled)
add_subdirectory(onboard_temp)
add_subdirectory(referee)
add_subdirectory(sbus)
add_subdirectory(witimu)
add_subdirectory(supercap)